--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MatchHogar | Quiénes somos</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
   <body>
     <!-- NAV -->
@@ -27,137 +26,107 @@
 
     <!-- ============================ MAIN =========================== -->
     <main>
-      <!-- Hero Section Mejorado -->
-      <section class="about-hero parallax-section">
+      <section class="hero about-hero">
         <div class="container">
-          <div class="hero-content text-center">
-            <h1 class="animated-title">Revolucionando la forma de compartir hogares</h1>
-            <p class="hero-subtitle">Conectamos sueños, construimos hogares, creamos comunidades</p>
-          </div>
+          <h1>Quiénes Somos</h1>
+          <p class="tagline">
+            Transformando la forma de conectar personas y crear hogares
+          </p>
         </div>
       </section>
 
-      <!-- Misión y Visión -->
-      <section class="mission-vision-section">
+      <section class="about-section">
         <div class="container">
-          <div class="mission-vision-grid">
-            <div class="mission-card">
-              <i class="fas fa-compass"></i>
-              <h2>Nuestra Misión</h2>
-              <p>Transformar la manera en que las personas encuentran y comparten espacios habitacionales, creando conexiones significativas y duraderas que van más allá de simples acuerdos de vivienda.</p>
+          <div class="about-grid">
+            <div class="about-card">
+              <div class="about-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                  <path d="M2 17l10 5 10-5"/>
+                  <path d="M2 12l10 5 10-5"/>
+                </svg>
+              </div>
+              <h3>Nuestra Misión</h3>
+              <p>Transformar la forma en que las personas encuentran y comparten espacios habitacionales.</p>
+              <ul class="about-features">
+                <li>Conexiones significativas</li>
+                <li>Espacios seguros</li>
+                <li>Comunidad vibrante</li>
+                <li>Experiencias compartidas</li>
+              </ul>
             </div>
-            <div class="vision-card">
-              <i class="fas fa-eye"></i>
-              <h2>Nuestra Visión</h2>
-              <p>Ser la plataforma líder en conexiones habitacionales, donde cada match sea el inicio de una historia de éxito y cada espacio compartido se convierta en un verdadero hogar.</p>
-            </div>
-          </div>
-        </div>
-      </section>
 
-      <!-- Valores -->
-      <section class="values-section">
-        <div class="container">
-          <h2 class="section-title">Nuestros Valores</h2>
-          <div class="values-grid">
-            <div class="value-card">
-              <i class="fas fa-heart"></i>
-              <h3>Confianza</h3>
-              <p>Construimos relaciones basadas en la transparencia y la honestidad.</p>
+            <div class="about-card">
+              <div class="about-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <circle cx="12" cy="12" r="10"/>
+                  <path d="M12 16l4-4-4-4"/>
+                  <path d="M8 12h8"/>
+                </svg>
+              </div>
+              <h3>Nuestra Historia</h3>
+              <p>Desde 2024 hemos conectado más de 1,000 personas con sus hogares ideales.</p>
+              <ul class="about-features">
+                <li>Fundación en 2024</li>
+                <li>+1000 matches exitosos</li>
+                <li>Presencia nacional</li>
+                <li>Crecimiento constante</li>
+              </ul>
             </div>
-            <div class="value-card">
-              <i class="fas fa-users"></i>
-              <h3>Comunidad</h3>
-              <p>Fomentamos conexiones significativas y el sentido de pertenencia.</p>
-            </div>
-            <div class="value-card">
-              <i class="fas fa-shield-alt"></i>
-              <h3>Seguridad</h3>
-              <p>Priorizamos la protección y tranquilidad de nuestros usuarios.</p>
-            </div>
-            <div class="value-card">
-              <i class="fas fa-lightbulb"></i>
+
+            <div class="about-card">
+              <div class="about-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/>
+                  <path d="M3.29 7L12 12l8.71-5"/>
+                  <path d="M12 22V12"/>
+                </svg>
+              </div>
               <h3>Innovación</h3>
-              <p>Mejoramos constantemente para ofrecer la mejor experiencia.</p>
+              <p>Combinamos tecnología avanzada con un toque humano para las mejores coincidencias.</p>
+              <ul class="about-features">
+                <li>Algoritmos inteligentes</li>
+                <li>Verificación avanzada</li>
+                <li>Plataforma segura</li>
+                <li>Mejora continua</li>
+              </ul>
             </div>
           </div>
         </div>
       </section>
 
-      <!-- Historia Timeline -->
-      <section class="timeline-section">
+      <section class="stats-section">
         <div class="container">
-          <h2 class="section-title">Nuestra Historia</h2>
-          <div class="timeline">
-            <div class="timeline-item">
-              <div class="timeline-dot"></div>
-              <div class="timeline-content">
-                <h3>2024</h3>
-                <p>Nacimiento de MatchHogar con una visión innovadora.</p>
-              </div>
-            </div>
-            <div class="timeline-item">
-              <div class="timeline-dot"></div>
-              <div class="timeline-content">
-                <h3>2024 Q2</h3>
-                <p>Alcanzamos nuestros primeros 1,000 matches exitosos.</p>
-              </div>
-            </div>
-            <div class="timeline-item">
-              <div class="timeline-dot"></div>
-              <div class="timeline-content">
-                <h3>2024 Q4</h3>
-                <p>Expandimos nuestros servicios a toda España.</p>
-              </div>
-            </div>
-            <div class="timeline-item">
-              <div class="timeline-dot"></div>
-              <div class="timeline-content">
-                <h3>2025</h3>
-                <p>Innovando con nuevas características y mejoras.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Estadísticas Animadas -->
-      <section class="stats-section parallax-section">
-        <div class="container">
+          <h2>Nuestro Impacto</h2>
           <div class="stats-grid">
             <div class="stat-card">
-              <i class="fas fa-users"></i>
-              <h3 class="counter">25k+</h3>
+              <h3>25k+</h3>
               <p>Usuarios Activos</p>
             </div>
             <div class="stat-card">
-              <i class="fas fa-home"></i>
-              <h3 class="counter">10k+</h3>
+              <h3>10k+</h3>
               <p>Matches Exitosos</p>
             </div>
             <div class="stat-card">
-              <i class="fas fa-city"></i>
-              <h3 class="counter">50+</h3>
+              <h3>50+</h3>
               <p>Ciudades</p>
             </div>
             <div class="stat-card">
-              <i class="fas fa-star"></i>
-              <h3 class="counter">98%</h3>
+              <h3>98%</h3>
               <p>Satisfacción</p>
             </div>
           </div>
         </div>
       </section>
 
-      <!-- CTA Section -->
-      <section class="about-cta-section">
+      <section class="cta-section">
         <div class="container">
-          <div class="cta-content text-center">
-            <h2>¿Listo para ser parte de nuestra historia?</h2>
-            <p>Únete a nuestra comunidad y encuentra tu hogar ideal</p>
+          <div class="cta-content">
+            <h2>¿Listo para formar parte de nuestra comunidad?</h2>
+            <p>Únete a miles de personas que ya han encontrado su espacio ideal</p>
             <div class="cta-buttons">
-              <a href="registro.html" class="btn btn-primary">Comenzar ahora</a>
-              <a href="que-ofrecemos.html" class="btn btn-outline">Conocer más</a>
+              <a href="registro.html" class="btn btn-primary">Registrarme ahora</a>
+              <a href="que-ofrecemos.html" class="btn btn-outline">Ver servicios</a>
             </div>
           </div>
         </div>
