--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="hero" id="inicio">
         <div class="container hero-content">
           <div class="hero-text">
-            <h1>Encuentra tu hogar ideal compartido</h1>
+            <h1>Revolucionando la forma de compartir hogares</h1>
             <p class="tagline">
               Conectamos personas con intereses comunes en vivienda, fincas, negocios y más. 
               Tu futuro espacio está a un match de distancia.
