--- a/que-ofrecemos.html
+++ b/que-ofrecemos.html
@@ -26,7 +26,7 @@
     <main>
       <section class="hero services-hero">
         <div class="container">
-          <h1>Qué Ofrecemos</h1>
+          <h1>Revolucionando la forma de compartir hogares</h1>
           <p class="tagline">
             Soluciones integrales para todas tus necesidades de vivienda compartida
           </p>
