--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -28,9 +28,9 @@
     <main>
       <section class="hero about-hero">
         <div class="container">
-          <h1>Quiénes Somos</h1>
+          <h1>Revolucionando la forma de compartir hogares</h1>
           <p class="tagline">
-            Transformando la forma de conectar personas y crear hogares
+            Conectamos personas, construimos comunidades, creamos hogares
           </p>
         </div>
       </section>
