--- a/que-ofrecemos.html
+++ b/que-ofrecemos.html
@@ -181,10 +181,10 @@
           <div class="testimonials-grid">
             <div class="testimonial-card">
               <div class="testimonial-content">
-                <p>"Encontré el compañero de piso perfecto en menos de una semana. El proceso fue muy sencillo y seguro."</p>
+                <p>"Encontré el compañero de piso perfecto en menos de una semana. El proceso fue muy sencillo y seguro. La plataforma es intuitiva y el sistema de matching realmente funciona."</p>
               </div>
               <div class="testimonial-author">
-                <img src="assets/user-1.jpg" alt="Ana M." />
+                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='12' fill='%23E0E0E0'/%3E%3Cpath d='M12 13c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4zm0 2c-2.7 0-8 1.3-8 4v2h16v-2c0-2.7-5.3-4-8-4z' fill='%23BDBDBD'/%3E%3C/svg%3E" alt="Ana M." />
                 <div>
                   <h4>Ana M.</h4>
                   <p>Usuario Premium</p>
@@ -193,21 +193,21 @@
             </div>
             <div class="testimonial-card">
               <div class="testimonial-content">
-                <p>"Como agente inmobiliario, MatchHogar me ha ayudado a expandir mi negocio y encontrar clientes ideales."</p>
+                <p>"Como agente inmobiliario, MatchHogar me ha ayudado a expandir mi negocio y encontrar clientes ideales. La plataforma profesional es una herramienta indispensable."</p>
               </div>
               <div class="testimonial-author">
-                <img src="assets/user-2.jpg" alt="Carlos R." />
+                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='12' fill='%23E0E0E0'/%3E%3Cpath d='M12 13c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4zm0 2c-2.7 0-8 1.3-8 4v2h16v-2c0-2.7-5.3-4-8-4z' fill='%23BDBDBD'/%3E%3C/svg%3E" alt="Carlos R." />
                 <div>
                   <h4>Carlos R.</h4>
-                  <p>Colaborador</p>
+                  <p>Agente Colaborador</p>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="cta-section offers-cta">
+            <div class="testimonial-card">
+              <div class="testimonial-content">
+                <p>"La inversión en MatchHogar Premium valió totalmente la pena. Los filtros avanzados y el soporte preferente me ayudaron a encontrar el lugar perfecto."</p>
+              </div>
+              <div class="testimonial-author">
         <div class="container">
           <div class="cta-content">
             <h2>¿Listo para comenzar?</h2>
