--- a/que-ofrecemos.html
+++ b/que-ofrecemos.html
@@ -208,6 +208,18 @@
                 <p>"La inversión en MatchHogar Premium valió totalmente la pena. Los filtros avanzados y el soporte preferente me ayudaron a encontrar el lugar perfecto."</p>
               </div>
               <div class="testimonial-author">
+                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='12' fill='%23E0E0E0'/%3E%3Cpath d='M12 13c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4zm0 2c-2.7 0-8 1.3-8 4v2h16v-2c0-2.7-5.3-4-8-4z' fill='%23BDBDBD'/%3E%3C/svg%3E" alt="Laura S." />
+                <div>
+                  <h4>Laura S.</h4>
+                  <p>Usuario Premium</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="cta-section offers-cta">
         <div class="container">
           <div class="cta-content">
             <h2>¿Listo para comenzar?</h2>
