--- a/registro.html
+++ b/registro.html
@@ -35,59 +35,72 @@
         </div>
       </section>
 
-      <!-- Planes Section -->
-      <section class="pricing-section">
+      <!-- Planes Section -->      <section class="registration-section">
         <div class="container">
-          <div class="pricing-grid">
-            <!-- Plan Básico -->
-            <div class="pricing-card">
-              <div class="pricing-header">
-                <h3>Usuario Básico</h3>
-                <p class="price">Gratis</p>
+          <h2 class="section-title">Elige tu tipo de registro</h2>
+          <div class="registration-grid">
+            <!-- Registro Básico -->
+            <div class="registration-card">
+              <div class="registration-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                  <circle cx="12" cy="7" r="4"/>
+                </svg>
               </div>
-              <ul class="pricing-features">
+              <h3>Usuario Básico</h3>
+              <p>Comienza gratis y explora las funcionalidades básicas de MatchHogar</p>
+              <ul class="registration-features">
                 <li>Perfil personal básico</li>
                 <li>Búsqueda de coincidencias</li>
                 <li>Mensajería básica</li>
-                <li>Alertas de nuevas oportunidades</li>
-                <li>Vista previa de propiedades</li>
-                <li>Soporte por email</li>
               </ul>
-              <a href="registro-basico.html" class="btn btn-outline">Comenzar gratis</a>
+              <div class="registration-price">
+                <span class="amount">Gratis</span>
+              </div>
+              <a href="registro-basico.html" class="btn btn-outline">Registrarse gratis</a>
             </div>
 
-            <!-- Plan Premium -->
-            <div class="pricing-card featured">
-              <div class="pricing-badge">Más popular</div>
-              <div class="pricing-header">
-                <h3>Usuario Premium</h3>
-                <p class="price">4,99 €<span>/mes</span></p>
+            <!-- Registro Premium -->
+            <div class="registration-card featured">
+              <div class="registration-badge">Recomendado</div>
+              <div class="registration-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                </svg>
               </div>
-              <ul class="pricing-features">
+              <h3>Usuario Premium</h3>
+              <p>Accede a todas las funcionalidades y obtén prioridad en las coincidencias</p>
+              <ul class="registration-features">
                 <li>Todas las características básicas</li>
                 <li>Perfil destacado</li>
-                <li>Filtros avanzados</li>
                 <li>Chat ilimitado</li>
-                <li>Prioridad en matches</li>
-                <li>Soporte preferente</li>
               </ul>
-              <a href="registro-premium.html" class="btn btn-primary">Suscribirse ahora</a>
+              <div class="registration-price">
+                <span class="amount">4,99 €</span>
+                <span class="period">/mes</span>
+              </div>
+              <a href="registro-premium.html" class="btn btn-primary">Comenzar ahora</a>
             </div>
 
-            <!-- Plan Colaborador -->
-            <div class="pricing-card">
-              <div class="pricing-header">
-                <h3>Colaborador</h3>
-                <p class="price">49,90 €<span>/alta</span></p>
+            <!-- Registro Colaborador -->
+            <div class="registration-card">
+              <div class="registration-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                  <polyline points="9 22 9 12 15 12 15 22"/>
+                </svg>
               </div>
-              <ul class="pricing-features">
+              <h3>Colaborador</h3>
+              <p>Portal especializado para profesionales del sector inmobiliario</p>
+              <ul class="registration-features">
                 <li>Portal profesional</li>
                 <li>Gestión de propiedades</li>
-                <li>Publicación de anuncios</li>
-                <li>Dashboard especializado</li>
                 <li>Análisis de mercado</li>
-                <li>Soporte prioritario</li>
               </ul>
+              <div class="registration-price">
+                <span class="amount">49,90 €</span>
+                <span class="period">/alta</span>
+              </div>
               <a href="registro-colaborador.html" class="btn btn-outline">Unirse como colaborador</a>
             </div>
           </div>
